--- a/.reek.yml
+++ b/.reek.yml
@@ -1,18 +1,5 @@
+# See https://github.com/troessner/reek#configuration-options
 ---
-
-### Generic smell configuration
-
-detectors:
-    # You can use filters to silence Reek warnings.  Either because you simply
-    # disagree with Reek (we are not the police) or because you want to fix
-    # this at a later point in time.
-    UtilityFunction:
-        exclude:
-            - "Sanchin::Config#bcrypt_cost"
-            - "Sanchin::Config#database_url"
-    ControlParameter:
-        exclude:
-            - "Sanchin::App#configure"
 
 ### Excluding directories
 
