--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,19 +1,35 @@
 # see https://rubocop.readthedocs.io/en/latest/configuration/
 AllCops:
-    TargetRubyVersion: 2.3
+    TargetRubyVersion: 2.5
     Exclude:
         - '.git/**/*'
         - 'bin/*'
         - 'node_modules/**/*'
         - 'spec/spec_helper.rb'
         - 'vendor/**/*'
+    # Style guide URLs are not displayed in offense messages by default. Change
+    # behavior by overriding `DisplayStyleGuide`, or by giving the
+    # `-S/--display-style-guide` option.
+    DisplayStyleGuide: true
+    # Extra details are not displayed in offense messages by default. Change
+    # behavior by overriding ExtraDetails, or by giving the
+    # `-E/--extra-details` option.
+    ExtraDetails: true
+
+# Sometimes there is no choice.
+Metrics/LineLength:
+      Max: 100
 
 # We like to use "transform(v) rescue v" patterns for changesets.
 Style/RescueModifier:
     Exclude:
-        - 'db/changesets/**/*'
+        - 'app/concepts/*/changesets/*'
 
 # top-level describe RSpec block can be very long.
 Metrics/BlockLength:
     Exclude:
         - 'spec/**/*'
+
+# && and || are ugly
+Style/AndOr:
+    Enabled: false
