--- a/.reek.yml
+++ b/.reek.yml
@@ -1,6 +1,13 @@
 # See https://github.com/troessner/reek#configuration-options
 ---
 
+### Generic smell configuration
+
+detectors:
+    # see https://github.com/troessner/reek/blob/master/docs/Utility-Function.md#configuration
+    UtilityFunction:
+        public_methods_only: true
+
 ### Directory specific configuration
 
 # You can configure smells on a per-directory base.
@@ -9,8 +16,6 @@
 directories:
     "app/concepts/user/operations":
         LongParameterList:
-            enabled: false
-        UtilityFunction:
             enabled: false
 
 ### Excluding directories
