Small changes on HTTP_IF_UNMODIFIED_SINCE handling
Returns 404 when a request comme without the HTTP_IF_UNMODIFIED_SINCE
and an invalid id.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,6 +34,7 @@ Metrics/BlockLength:
 Style/RescueModifier:
     Exclude:
         - 'app/lib/types.rb'
+        - 'app/api/*/help.rb'
 
 # ignorance can be a bliss.
 Style/RescueStandardError:
