--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,10 @@
 # The default SQL Database Data Source Name
-DATABASE_URL=postgres://user:pass@example.com/dbname
+#DATABASE_URL=postgres://user:pass@example.com/dbname
 
 # The BCrypt::Engine.cost that should be used.
 # Run `./bin/rake bcrypt:cost` to find an acceptable value.
-# See also tasks/bcrypt.rake.
-BCRYPT_COST=12
+#BCRYPT_COST=
+
+# Secret used to sign the JWT tokens.
+# Run `./bin/rake "random:hex[16]"` to create one.
+#JWT_SECRET=
